2008-02-06  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: use LIBBACKGROUND_{CFLAGS,...} instead of CAPPLET_...
	so we can use libbackground from gnome-settings-daemon, too

2008-01-14  Soren Sandmann <sandmann@daimi.au.dk>

	* applier.[ch]: Delete these files

	* Makefile.am: Remove them here.

2007-04-16  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Erich Schubert <erich@debian.org>

	* applier.c: (get_geometry): fix scaling for WPTYPE_ZOOM. Fixes
	bug #342356.

2007-01-08  Rodney Dawes  <dobey@novell.com>

	* preferences.c (bg_preferences_merge_entry):
	Set prefs->enabled not prefs->wallpaper_enabled
	Patch from Jean-Christophe Jaskula

	Fixes #339404

2006-08-23  Kjartan Maraas  <kmaraas@gnome.org>

	* preferences.c: (bg_preferences_load),
	(bg_preferences_merge_entry), (read_wptype_from_string),
	(read_orientation_from_string): Make read_orientation_from_string()
	and read_wptype_from_string() behave like read_color_from_string()
	and adjust all callers. Avoids some excess strduping too I guess.
	Closes bug #352252.

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* preferences.c (bg_preferences_load): Revert previous leak fix from
	Kjartan Maraas as it seems to cause crashes in nautilus

	see bug #352279

2006-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* preferences.c: (bg_preferences_load): Don't leak gconf strings.

2006-06-27  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: redundant GNOMELOCALEDIR removed. Patch from #345178
	applied.
	
2006-01-14  Alan Swanson <swanson@ukfsn.org>

	* applier.c (get_geometry): Handle the new WPTYPE_ZOOM setting and
	return proper geometry for it

	* preferences.c (_bg_wptype_values[]): Add the alias for the zoom type
	(read_wptype_from_string): Handle setting the type for zoom
	(bg_preferences_get_wptype_as_string): Return the string for the new
	zoom setting type

	* preferences.h (_wallpaper_type_t): Add the new zoom type

	Partial code for #105231
	
2005-11-07  Alexis Robert <alexis@linuxcode.eu.org>
